--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
     "firebase": "^8.6.8",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
